[gd_scene load_steps=2 format=3 uid="uid://b242jr5m8l31r"]

[ext_resource type="Script" uid="uid://mwxtiibrpr4x" path="res://main.gd" id="1_ig7tw"]

[node name="Main" type="Node2D"]
script = ExtResource("1_ig7tw")

[node name="UpperControl" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ClickCount" type="Button" parent="UpperControl"]
layout_mode = 0
offset_left = 797.0
offset_top = 537.0
offset_right = 1009.0
offset_bottom = 587.0
rotation = -0.5235988
text = "Click"

[node name="StartAutoClick" type="Button" parent="UpperControl"]
layout_mode = 0
offset_left = 977.0
offset_top = 14.0
offset_right = 1142.3275
offset_bottom = 95.41858
rotation = 0.5235988
text = "Start auto click"

[node name="UpgradeAutoClick" type="Button" parent="UpperControl"]
layout_mode = 0
offset_left = 38.0
offset_top = 586.0
offset_right = 261.0
offset_bottom = 617.0
rotation = -0.7853982
text = "Upgrade auto click [5 Coins]"

[node name="UpgradeClick" type="Button" parent="UpperControl"]
layout_mode = 0
offset_left = 87.0
offset_top = 317.0
offset_right = 279.0
offset_bottom = 348.0
rotation = 0.5235988
text = "Upgrade click [20 Coins]
"

[node name="ClickLabel" type="RichTextLabel" parent="UpperControl"]
layout_mode = 0
offset_left = 223.0
offset_top = 485.99997
offset_right = 813.0
offset_bottom = 538.0
rotation = -0.2617994
bbcode_enabled = true
text = "[font_size=32]Ammount:"

[node name="ProgressBar" type="ProgressBar" parent="UpperControl"]
layout_mode = 0
offset_left = 31.0
offset_top = 19.0
offset_right = 1174.7389
offset_bottom = 46.0
rotation = 0.2617994

[node name="Timer" type="Timer" parent="UpperControl"]

[connection signal="pressed" from="UpperControl/ClickCount" to="." method="_on_click_count_pressed"]
[connection signal="pressed" from="UpperControl/StartAutoClick" to="." method="_on_start_auto_click_pressed"]
[connection signal="pressed" from="UpperControl/UpgradeAutoClick" to="." method="_on_upgrade_auto_click_pressed"]
[connection signal="pressed" from="UpperControl/UpgradeClick" to="." method="_on_upgrade_click_pressed"]
[connection signal="timeout" from="UpperControl/Timer" to="." method="_on_timer_timeout"]
